==> ChibiOS/ChibiOS-Contrib/os/hal/ports/NRF5/LLD/hal_spi_lld.c <==
#include "hal.h"

void spi_lld_init(void) {

#if NRF5_SPI_USE_SPI0
  spiObjectInit(&SPID1);
  SPID1.port = NRF_SPI0;
#endif
#if NRF5_SPI_USE_SPI1
  spiObjectInit(&SPID2);
  SPID2.port = NRF_SPI1;
#endif
}

void spi_lld_start(SPIDriver *spip) {
  uint32_t config;

  if (spip->state == SPI_STOP) {
#if NRF5_SPI_USE_SPI0
    if (&SPID1 == spip)
      nvicEnableVector(SPI0_TWI0_IRQn, NRF5_SPI_SPI0_IRQ_PRIORITY);
#endif
#if NRF5_SPI_USE_SPI1
    if (&SPID2 == spip)
      nvicEnableVector(SPI1_TWI1_IRQn, NRF5_SPI_SPI1_IRQ_PRIORITY);
#endif
  }

  config = spip->config->lsbfirst ?
    (SPI_CONFIG_ORDER_LsbFirst << SPI_CONFIG_ORDER_Pos) :
    (SPI_CONFIG_ORDER_MsbFirst << SPI_CONFIG_ORDER_Pos);

  switch (spip->config->mode) {
    case 1:
      config |= (SPI_CONFIG_CPOL_ActiveLow << SPI_CONFIG_CPOL_Pos);
      config |= (SPI_CONFIG_CPHA_Trailing << SPI_CONFIG_CPHA_Pos);
      break;
    case 2:
      config |= (SPI_CONFIG_CPOL_ActiveHigh << SPI_CONFIG_CPOL_Pos);
      config |= (SPI_CONFIG_CPHA_Leading << SPI_CONFIG_CPHA_Pos);
      break;
    case 3:
      config |= (SPI_CONFIG_CPOL_ActiveHigh << SPI_CONFIG_CPOL_Pos);
      config |= (SPI_CONFIG_CPHA_Trailing << SPI_CONFIG_CPHA_Pos);
      break;
    default:
      config |= (SPI_CONFIG_CPOL_ActiveLow << SPI_CONFIG_CPOL_Pos);
      config |= (SPI_CONFIG_CPHA_Leading << SPI_CONFIG_CPHA_Pos);
      break;
  }

  /* Configuration.*/
  spip->port->CONFIG = config;
#if NRF_SERIES == 51
  spip->port->PSELSCK = spip->config->sckpad;
  spip->port->PSELMOSI = spip->config->mosipad;
  spip->port->PSELMISO = spip->config->misopad;
#else
  spip->port->PSEL.SCK = spip->config->sckpad;
  spip->port->PSEL.MOSI = spip->config->mosipad;
  spip->port->PSEL.MISO = spip->config->misopad;
#endif
  spip->port->FREQUENCY = spip->config->freq;
  spip->port->ENABLE = (SPI_ENABLE_ENABLE_Enabled << SPI_ENABLE_ENABLE_Pos);

  /* clear events flag */
  spip->port->EVENTS_READY = 0;
#if CORTEX_MODEL >= 4
  (void)spip->port->EVENTS_READY;
#endif
}

void spi_lld_stop(SPIDriver *spip) {

  if (spip->state != SPI_STOP) {
    spip->port->ENABLE  = (SPI_ENABLE_ENABLE_Disabled << SPI_ENABLE_ENABLE_Pos);
    spip->port->INTENCLR = (SPI_INTENCLR_READY_Clear << SPI_INTENCLR_READY_Pos);
#if NRF5_SPI_USE_SPI0
    if (&SPID1 == spip)
      nvicDisableVector(SPI0_TWI0_IRQn);
#endif
#if NRF5_SPI_USE_SPI1
    if (&SPID2 == spip)
      nvicDisableVector(SPI1_TWI1_IRQn);
#endif
  }
}

void spi_lld_ignore(SPIDriver *spip, size_t n) {

  spip->rxptr = NULL;
  spip->txptr = NULL;
  spip->rxcnt = spip->txcnt = n;
  port_fifo_preload(spip);
  spip->port->INTENSET = (SPI_INTENCLR_READY_Enabled << SPI_INTENCLR_READY_Pos);
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {

  spip->rxptr = rxbuf;
  spip->txptr = txbuf;
  spip->rxcnt = spip->txcnt = n;
  port_fifo_preload(spip);
  spip->port->INTENSET = (SPI_INTENCLR_READY_Enabled << SPI_INTENCLR_READY_Pos);
}

void spi_lld_send(SPIDriver *spip, size_t n, const void *txbuf) {

  spip->rxptr = NULL;
  spip->txptr = txbuf;
  spip->rxcnt = spip->txcnt = n;
  port_fifo_preload(spip);
  spip->port->INTENSET = (SPI_INTENCLR_READY_Enabled << SPI_INTENCLR_READY_Pos);
}

void spi_lld_receive(SPIDriver *spip, size_t n, void *rxbuf) {

  spip->rxptr = rxbuf;
  spip->txptr = NULL;
  spip->rxcnt = spip->txcnt = n;
  port_fifo_preload(spip);
  spip->port->INTENSET = (SPI_INTENCLR_READY_Enabled << SPI_INTENCLR_READY_Pos);
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {

  spip->port->TXD = (uint8_t)frame;
  while (spip->port->EVENTS_READY == 0)
    ;
  spip->port->EVENTS_READY = 0;
#if CORTEX_MODEL >= 4
  (void)spip->port->EVENTS_READY;
#endif
  return spip->port->RXD;
}
